<resources>
    <string name="app_name">CAEII 2017</string>
    <string name="image">Image thumbnail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_title">XV CAEII 2017</string>
    <string name="action_settings">Settings</string>
    <string name="mision_fragment">Misión, Visión y Objetivos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activitiesTitle">Actividades</string>
    <string name="newsTitle">Novedades</string>
    <string name="TouristicGuideTitle">Guia Turistica</string>
    <string name="AboutUsTitle">Quienes Somos</string>
    <string name="aareiiTitle">¿Que es AArEII?</string>
    <string name="delegationsTitle">Delegaciones Organizadoras</string>
    <string name="contactTitle">Contacto</string>
    <string name="scheduleTitle">Cronograma</string>
    <string name="conferencesTitle">Conferencias y Talleres</string>
    <string name="technicalVisitsTitle">Visitas Tecnicas</string>
    <string name="speakersTitle">Disertantes</string>
    <string name="misionText">Su Misión es propiciar la integración nacional de los estudiantes de Ingeniería Industrial y afines a través del intercambio permanente de información, la realización de congresos, seminarios y jornadas regionales, nacionales, internacionales y toda otra actividad que persiga tal fin.</string>
    <string name="visionText">Siendo su Visión consolidarnos como la Asociación de estudiantes más importante del país en Ingeniería Industrial y carreras afines y ser reconocida por las comunidades social, universitaria y empresarial como referente nacional e internacional de integración, perfeccionamiento y potenciación de los estudiantes de nuestra carrera.</string>
    <string name="objectiveText">Realizar un congreso del más alto nivel académico, que trate temáticas innovadoras no desarrolladas por la formación tradicional, complementando la carrera universitaria, promoviendo el interés y el involucramiento de los asistentes en los diferentes roles que el ingeniero puede adoptar tanto en el ámbito público como el sector privado.</string>
    <string name="aboutUsTitle">Quienes Somos</string>
    <string name="aareiiText">La Asociación Argentina de Estudiantes de Ingeniería Industrial y carreras afines es una asociación civil sin fines de lucro con personería jurídica, que nuclea a los estudiantes de Ingeniería Industrial y carreras afines de todo el país. Actualmente la AArEII posee más de 7000 asociados con 40 universidades activas en todo el país y donde participan 141 Universidades (65 de Argentina y 76 del resto de América), las cuales nuclean a más de 20.000 estudiantes de Ingeniería Industrial y carreras afines.</string>
    <string name="facebookURL">https://www.facebook.com/CAEII</string>
    <string name="twitterURL">https://twitter.com/caeii_oficial</string>
    <string name="aareiiURL">http://www.aareii.org.ar/</string>
    <string name="misionTitle">Misión</string>
    <string name="visionTitle">Visión</string>
    <string name="objectiveTitle">Objetivos</string>
    <string name="coordinationTitle">Coordinación CAEII</string>
    <string name="coordinationMail">coordinacion@caeii.com.ar</string>
    <string name="diffusionTitle">Difusión</string>
    <string name="diffusionMail">difusion@caeii.com.ar</string>
    <string name="visitItemTest1">Bodega Garbin</string>
    <string name="visitItemTest2">Ketobac</string>
    <string name="stopAlarm">Apagar Alarma</string>
    <string name="construction">En construcción</string>
    <string name="visitItemTest3">El Secreto</string>
    <string name="fiubaWebPage">http://www.fi.uba.ar/</string>
    <string name="ucaWebPage">http://www.uca.edu.ar/index.php/home/index/es</string>
    <string name="unlWebPage">http://www.unl.edu.ar/</string>
    <string name="ungsWebPage">http://www.ungs.edu.ar/ms_ungs/</string>
    <string name="unlpWebPage">http://www.unlp.edu.ar/</string>
    <string name="utnlpWebPage">http://www.frlp.utn.edu.ar/web/</string>
    <string name="utnbaWebPage">https://www.frba.utn.edu.ar/</string>
    <string name="utngpWebPage">http://www.frgp.utn.edu.ar/</string>
    <string name="unluWebPage">http://www.unlu.edu.ar/</string>
    <string name="instagramURL">https://www.instagram.com/caeii_oficial/</string>
    <string name="sponsorsTitle">Sponsors</string>
    <string name="exclusiveSponsor">Sponsor Exclusivo</string>
    <string name="sponsors">Sponsors</string>
    <string name="techintWebPage">http://www.techint.com</string>
    <string name="arcorWebPage">http://www.arcor.com.ar</string>
    <string name="penaflorWebPage">http://www.grupopenaflor.com.ar/</string>
    <string name="paeWebPage">https://www.pan-energy.com</string>
    <string name="cneaWebPage">http://www.cnea.gov.ar/</string>
    <string name="title_activity_test">test</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ThursdayTitle">Jueves</string>
    <string name="FridayTitle">Viernes</string>
    <string name="SaturdayTitle">Sabado</string>
    <string name="SundayTitle">Domingo</string>
    <string name="UsefulInformation">Información Útil</string>
    <string name="InterestLink">Links de Interés</string>
    <string name="encontramasURL">http://encontramas.com.ar/</string>
    <string name="turismoURL">https://turismo.buenosaires.gob.ar/</string>
    <string name="Plane">Planos del Lugar</string>
    <string name="pilars_activity">Pilares fundamentales</string>
    <string name="mision2050">Mision 2050</string>
    <string name="industrialADN">ADN Industrial</string>
    <string name="deck">Sumá Cartas a tu Baraja</string>
    <string name="mision2050Text">Cómo será la vida en poco más de 30 años es un misterio, y en ese tiempo estaremos viviendo no solo nosotros sino nuestros hijos y hasta tal vez nuestros nietos. Te invitamos a hacer un recorrido por los avances de la ciencia, la tecnología y la sustentabilidad, 3 temas que están hermanados a la hora de pensar en un futuro prospero para todos.</string>
    <string name="industrialADNText">Estudiamos la carrera que más se adapta a cualquier sector de una industria, el poder de adaptarnos a las diversas situaciones que te presenta el día a día en una empresa corre por nuestras venas básicamente. Con este pilar conoceremos experiencias de profesionales que estuvieron involucrados en algún inconveniente y lograron sobreponerse con éxito.</string>
    <string name="deckText">Acompañando nuestra formación profesional van apareciendo herramientas que funcionan de facilitadores a la hora de querer emprender, de querer medir la efectividad de un proceso, etc. Con este pilar esperamos acercarnos a dichas herramientas, tomar conciencia de su utilidad y por sobre todo, salir con ganas de utilizarlas.</string>
    <string name="aliados">Aliados</string>
    <string name="danaWebPage">http://dana.com.ar//</string>
    <string name="ceciliaWebPage">http://www.ceciliademadonna.com.ar/</string>
    <string name="socialabWebPage">http://www.socialab.com/</string>
    <string name="intiWebPage">https://www.inti.gob.ar/</string>
    <string name="mercadolibreWebPage">https://www.mercadolibre.com.ar/</string>
    <string name="femsaWebPage">https://www.coca-colafemsa.com/presencia/presencia-argentina.html</string>
    <string name="unileverWebPage">https://www.unilever.com.ar/</string>
    <string name="ExoConferenceText">Imaginación, sentido común, ingeniería, una impresora 3d y gomitas, nos permitieron diseñar para Linda, una chica con una discapacidad motriz de 4 años, un exoesqueleto para mejorar su movilidad. Los desafíos en el proceso de diseño, de armado y de prototipado fue un valioso camino a recorrer, y todavía no se llegó al final. En la charla contaremos la historia, los avances, y lo que vendrá.</string>
    <string name="puraWebPage">http://pura.com.ar/</string>
    <string name="developers">Desarrolladores</string>
    <string name="martin">Martin Artime: martin.artime@hotmail.com</string>
    <string name="pablo">Pablo Becerra: pablo.d.becerra94@gmail.com</string>
</resources>
