<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_activities"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="overhead.caeii2017.Actividades.ActivitiesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="519dp">

                <TextView
                    android:text="@string/coordinationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/coordinationTitle"
                    android:layout_below="@+id/appbar"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/coordinationMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:id="@+id/coordinationMail"
                    android:layout_below="@+id/coordinationTitle"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/diffusionMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:id="@+id/diffusionMail"
                    android:layout_below="@+id/diffusionTitle"
                    android:layout_centerHorizontal="true" />

                <TextView
                android:text="@string/diffusionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:id="@+id/diffusionTitle"
                android:layout_below="@+id/coordinationMail"
                android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/developers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:id="@+id/developers"
                    android:layout_below="@+id/diffusionMail"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/martin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:id="@+id/martin"
                    android:layout_below="@+id/developers"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:text="@string/pablo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:id="@+id/pablo"
                    android:layout_below="@+id/martin"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/lineasinferiores"
                    android:id="@+id/imageView6"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_below="@+id/pablo"
                    android:layout_alignLeft="@+id/martin"
                    android:layout_alignStart="@+id/martin" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            />

    </android.support.design.widget.AppBarLayout>

</RelativeLayout>